--- a/package.json
+++ b/package.json
@@ -11,15 +11,18 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.0.1",
+    "@headlessui/react": "^1.7.14",
     "@heroicons/react": "^2.0.16",
     "@types/node": "18.15.9",
     "@types/react": "18.0.29",
     "@types/react-dom": "18.0.11",
     "antd": "^5.3.2",
+    "emailjs-com": "^3.2.0",
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-sticky-box": "^2.0.0",
+    "react-toastify": "^9.1.2",
     "swiper": "^9.2.0",
     "typescript": "5.0.2"
   },
