--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/node": "18.15.9",
     "@types/react": "18.0.29",
     "@types/react-dom": "18.0.11",
+    "@vercel/analytics": "^1.0.1",
     "antd": "^5.3.2",
     "emailjs-com": "^3.2.0",
     "next": "13.2.4",
