--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@vercel/analytics": "^1.0.1",
     "antd": "^5.3.2",
     "emailjs-com": "^3.2.0",
+    "framer-motion": "^10.12.18",
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
