--- a/package.json
+++ b/package.json
@@ -12,25 +12,26 @@
   "dependencies": {
     "@ant-design/icons": "^5.0.1",
     "@headlessui/react": "^1.7.14",
-    "@heroicons/react": "^2.0.16",
+    "@nextui-org/react": "^2.2.10",
     "@types/node": "18.15.9",
     "@types/react": "18.0.29",
     "@types/react-dom": "18.0.11",
     "@vercel/analytics": "^1.0.1",
     "antd": "^5.3.2",
     "emailjs-com": "^3.2.0",
-    "framer-motion": "^10.12.18",
-    "next": "13.2.4",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "framer-motion": "^10.18.0",
+    "next": "^13.5.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.3",
     "react-sticky-box": "^2.0.0",
     "react-toastify": "^9.1.2",
-    "swiper": "^9.2.0",
-    "typescript": "5.0.2"
+    "swiper": "^9.2.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
-    "tailwindcss": "^3.2.7"
+    "tailwindcss": "^3.2.7",
+    "typescript": "5.0.2"
   }
 }
