--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react": "18.0.29",
     "@types/react-dom": "18.0.11",
     "@vercel/analytics": "^1.0.1",
+    "@vercel/speed-insights": "^1.0.10",
     "antd": "^5.3.2",
     "emailjs-com": "^3.2.0",
     "framer-motion": "^10.18.0",
