--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
    },
    "dependencies": {
       "@ant-design/icons": "^5.0.1",
+      "@emailjs/browser": "^4.4.1",
       "@headlessui/react": "^1.7.14",
       "@nextui-org/react": "^2.2.10",
       "@types/node": "18.15.9",
@@ -21,7 +22,6 @@
       "@vercel/speed-insights": "^1.0.10",
       "antd": "^5.3.2",
       "cloudinary": "^2.8.0",
-      "emailjs-com": "^3.2.0",
       "framer-motion": "^10.18.0",
       "next": "^13.5.4",
       "react": "^18.2.0",
